# Pixion

./: .readthedocs.yaml  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: release.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  pixion.rst  tools.rst
docs/source/_generated/: pixion.adder_tool.rst  pixion.pixion.rst  pixion.rst  tools.even_adder.rst  tools.rst
docs/source/_templates/autoapi/: index.rst
docs/source/development/: contribution.rst  license.rst
docs/source/getting-started/: basic-usage.rst  extra-tools.rst  installation.rst  introduction.rst  library-features.rst
pixion/: pixion.py
tests/: test_pixion.py
tools/: README.md  color_thresholding.py
